  [Michele Simionato]
  * Made it possible to set `hazard_curves_from_gmfs=true` with
    `ground_motion_fields=false` in the event based hazard calculator
  * Introduced a `task_duration` parameter and a mechanism to split the tasks
    exceeding it (approximately)
  * Integrated `oq plot_memory` into `oq plot`
  * Improved the task distribution by splitting the heavy sources on the master
  * Removed `NaN` values for strike and dip when exporting griddedRuptures
  * Fixed `oq reset` to work in multi-user mode
  * Extended the source_id-filtering feature in the job.ini to multiple sources
  * Supported .wkt files for the binary perils in the multi_risk calculator
  * Added an early check on the coefficients of variation and loss ratios of
    vulnerability functions with the Beta distribution
  * Made sure that `oq engine --dc` removes the HDF5 cache file too
  * Removed the flag `optimize_same_id_sources` because it is useless now
  * Introduced a soft limit at 65,536 sites for event_based calculations
  * Fixed a performance regression in ucerf_classical that was filtering
    before splitting, thus becoming extra-slow
  * Improved the progress log, that was delayed for large classical calculations
  * Exported the ruptures as 3D multi-polygons (instead of 2D ones)
  * Changed the `aggregate_by` exports for consistency with the others
  * Changed the losses_by_event exporter for ebrisk, to make it more
    consistent with scenario_risk and event_based_risk
  * Changed the agglosses and losses_by_event exporters in scenario_risk,
    by adding a column with the realization index
  * Changed the generation of the hazard statistics to consume very little
    memory
  * Fixed a bug with concurrent_tasks being inherited from the parent
    calculation instead of using the standard default
  * Removed the dependency from mock, since it is included in unittest.mock
  * For scenario, replaced the `branch_path` with the GSIM representation in
    the realizations output